# django-timescaledb-example

./: .env.dist  .gitignore  LICENSE  Procfile  README.md  pyproject.toml
core/: api_urls.py  celery.py  settings.py  urls.py
readings/: BingSiteAuth_rvMlB29.xml
sensor/: admin.py  api_urls.py  forms.py  io.py  models.py  tasks.py  urls.py  views.py
sensor/api/: serializers.py  views.py  viewsets.py
sensor/management/commands/: import_files_to_db.py
sensor/migrations/: 0001_initial.py  0002_auto_20231218_1516.py  0002_sensor_reading.py  0003_filetype.py  0004_file_type.py  0005_source_alter_file_parsed_at_and_more.py  0005_source_alter_filetype_datetime_fieldnames_and_more.py
sensor/templates/: create_file_type.html  index.html  upload_file.html
shell/: createdb.sh
tests/: __init__.py  conftest.py  globals.py
tests/sensor/: test_io.py  test_models.py  test_tasks.py  test_views.py
tests/sensor/__snapshots__/: test_io.ambr  test_models.ambr  test_views.ambr
tests/sensor/api/: test_viewsets.py
tests/sensor/api/__snapshots__/: test_viewsets.ambr
